--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.ProjetoFinal" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.ProjetoFinal" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/seila</item>
     </style>
 
     <style name="Theme.ProjetoFinal" parent="Base.Theme.ProjetoFinal" />
